# SilverHealthCare

./: .gitignore  QUICKSTART.md  README.md  README_EXTENDED.md
backend/: .env.development  main.py  main_simple.py  models.py  pyproject.toml
deploy/: README.md  deploy-app.sh  deploy-dadanggeun.sh  deploy-frontend.sh  deploy-logos.sh  enable-https.sh  setup-nginx.sh  update-server-backend.sh
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  App_simple.tsx
frontend/src/TEST/: TEST.html
frontend/src/components/: EmergencyAlerts.tsx  HealthDashboard.tsx  HealthReports.tsx  Login.tsx  Medications.tsx  OverviewDashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
sugar/: sugar.md
sugar/backend/: server.js
sugar/backups/v1_stable/backend/: server.js
sugar/backups/v1_stable/sugar_react/: index.html
sugar/backups/v1_stable/sugar_react/src/: App.jsx  index.css
sugar/backups/v1_stable/sugar_react/src/components/: AdminStep.jsx  AuthStep.jsx  RecitalStep.jsx  RewardStep.jsx
sugar/backups/v1_stable/sugar_react/src/data/: verses.js
sugar/sugar_react/: index.html
sugar/sugar_react/src/: App.jsx  index.css
sugar/sugar_react/src/components/: AdminStep.jsx  AuthStep.jsx  PraiseStep.jsx  RecitalStep.jsx
sugar_enhanced_backup/: app.js  index.css  step1.html  step2.html  step3.html  verses.js
